// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text> renders 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  body={true}
  caption={false}
  ellipsizeMode="tail"
  headline={false}
  level={1}
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
        "fontWeight": "400",
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 16,
        "lineHeight": 30,
      },
      false,
      Object {},
    ]
  }
  subtitle={false}
/>
`;

exports[`<Text> when {bold} 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  body={true}
  bold={true}
  caption={false}
  ellipsizeMode="tail"
  headline={false}
  level={1}
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
        "fontWeight": "400",
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 16,
        "lineHeight": 30,
      },
      false,
      Object {},
    ]
  }
  subtitle={false}
>
  Hello World
</Text>
`;

exports[`<Text> when {color} 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  body={true}
  caption={false}
  ellipsizeMode="tail"
  headline={false}
  level={1}
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
        "fontWeight": "400",
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 16,
        "lineHeight": 30,
      },
      false,
      Object {
        "color": "#ef5160",
      },
    ]
  }
  subtitle={false}
>
  Hello World
</Text>
`;

exports[`<Text> when {italic} 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  body={true}
  caption={false}
  ellipsizeMode="tail"
  headline={false}
  italic={true}
  level={1}
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
        "fontWeight": "400",
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 16,
        "lineHeight": 30,
      },
      false,
      Object {},
    ]
  }
  subtitle={false}
>
  Hello World
</Text>
`;

exports[`<Text> when {large} 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  body={true}
  caption={false}
  ellipsizeMode="tail"
  headline={false}
  large={true}
  level={1}
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
        "fontWeight": "400",
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 16,
        "lineHeight": 30,
      },
      false,
      Object {},
    ]
  }
  subtitle={false}
>
  Hello World
</Text>
`;

exports[`<Text> when {lighten} 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  body={true}
  caption={false}
  ellipsizeMode="tail"
  headline={false}
  level={1}
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
        "fontWeight": "400",
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 16,
        "lineHeight": 30,
      },
      Object {
        "color": "#9b9b9b",
      },
      Object {},
    ]
  }
  subtitle={false}
>
  Hello World
</Text>
`;

exports[`<Text> when {lighter} 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  body={true}
  caption={false}
  ellipsizeMode="tail"
  headline={false}
  level={1}
  lighter={true}
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
        "fontWeight": "400",
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 16,
        "lineHeight": 30,
      },
      false,
      Object {},
    ]
  }
  subtitle={false}
>
  Hello World
</Text>
`;

exports[`<Text> when {numberOfLines} 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  body={true}
  caption={false}
  ellipsizeMode="tail"
  headline={false}
  level={1}
  numberOfLines={2}
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
        "fontWeight": "400",
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 16,
        "lineHeight": 30,
      },
      false,
      Object {},
    ]
  }
  subtitle={false}
>
  Hello World
</Text>
`;

exports[`<Text> when {primary} 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  body={true}
  caption={false}
  ellipsizeMode="tail"
  headline={false}
  level={1}
  primary={true}
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
        "fontWeight": "400",
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 16,
        "lineHeight": 30,
      },
      false,
      Object {},
    ]
  }
  subtitle={false}
>
  Hello World
</Text>
`;

exports[`<Text> when {secondary} 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  body={true}
  caption={false}
  ellipsizeMode="tail"
  headline={false}
  level={1}
  secondary={true}
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
        "fontWeight": "400",
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 16,
        "lineHeight": 30,
      },
      false,
      Object {},
    ]
  }
  subtitle={false}
>
  Hello World
</Text>
`;

exports[`<Text> when {semibold} 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  body={true}
  caption={false}
  ellipsizeMode="tail"
  headline={false}
  level={1}
  semibold={true}
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
        "fontWeight": "400",
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 16,
        "lineHeight": 30,
      },
      false,
      Object {},
    ]
  }
  subtitle={false}
>
  Hello World
</Text>
`;

exports[`<Text> when {small} 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  body={true}
  caption={false}
  ellipsizeMode="tail"
  headline={false}
  level={1}
  small={true}
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
        "fontWeight": "400",
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 16,
        "lineHeight": 30,
      },
      false,
      Object {},
    ]
  }
  subtitle={false}
>
  Hello World
</Text>
`;

exports[`<Text> when {style} 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  body={true}
  caption={false}
  ellipsizeMode="tail"
  headline={false}
  level={1}
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
        "fontWeight": "400",
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 16,
        "lineHeight": 30,
      },
      false,
      Object {
        "color": "orange",
      },
    ]
  }
  subtitle={false}
>
  Hello World
</Text>
`;

exports[`<Text> when {tiny} 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  body={true}
  caption={false}
  ellipsizeMode="tail"
  headline={false}
  level={1}
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
        "fontWeight": "400",
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 16,
        "lineHeight": 30,
      },
      false,
      Object {},
    ]
  }
  subtitle={false}
  tiny={true}
>
  Hello World
</Text>
`;

exports[`<Text> when {title} 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  body={true}
  caption={false}
  ellipsizeMode="tail"
  headline={false}
  level={1}
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
        "fontWeight": "400",
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 16,
        "lineHeight": 30,
      },
      false,
      Object {},
    ]
  }
  subtitle={false}
  title={true}
>
  Hello World
</Text>
`;
